infrastructure/k8s/local/portal-local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal
spec:
  template:
    spec:
      containers:
        - name: portal
          volumeMounts:
            - name: portal-data
              mountPath: /data
      volumes:
        - name: portal-data
          persistentVolumeClaim:
            claimName: portal-data
