infrastructure/k8s/local/service-ports-local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prescription-service
spec:
  template:
    spec:
      containers:
        - name: prescription-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vision-service
spec:
  template:
    spec:
      containers:
        - name: vision-service
