infrastructure/k8s/local/ingress-delete.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clouddental-ingress
